--- a/kelas-5/tugas/bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html
+++ b/kelas-5/tugas/bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html
@@ -148,7 +148,7 @@ button:hover { background-color: #0056b3; }
 <body>
 <div class="container">
     <div class="nav">
-        <a href="tugas.html">◀️ kembali</a>
+        <a href="../../tugas-bIndo.html">◀️ kembali</a>
         <a href="Soal_Tugas_Selasa_25_November_2025.docx" download>📥 Download</a>
     </div>
 
@@ -385,3 +385,4 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
