--- a/kelas-5/tugas/bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html
+++ b/kelas-5/tugas/bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html
@@ -22,7 +22,7 @@
 body {
     font-family: 'Arial', sans-serif;
     padding: 20px;
-    background-image: url('https://i.imgur.com/gVxQsB9.png');
+    background-image: url('https://i.imgur.com/BlWoTZd.png');
     background-size: cover;
     background-position: center;
 }
@@ -385,4 +385,5 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
 
