--- a/kelas-5/tugas/bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html
+++ b/kelas-5/tugas/bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Kuis Seru Petualangan</title>
+<title>Latihan Soal Bahasa Indonesia</title>
 <style>
 /* ——— CSS Anda tetap, tidak diubah sedikit pun ——— */
 .kotak-soal {
@@ -385,5 +385,6 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
 
 
