--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -176,8 +176,8 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../../../index.html">🏠 Beranda</a>
-      <a href="../../tugas-bIndo.html">◀️ Kembali</a>
+      <a href="../../index.html">🏠 Beranda</a>
+      <a href="tugas.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
     </div>
   </nav>
@@ -237,6 +237,7 @@
 
 </body>
 </html>
+
 
 
 
