--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -126,7 +126,7 @@
   <!-- Tombol Mapel -->
   <div class="task-container">
     <a href="tugas-bIndo.html">📘 Bahasa Indonesia</a>
-    <a href="tugas-mtk.html">📗 Matematika</a>
+    <a href="tugas/matematika/soal_matematika_25_nov_25.html">📗 Matematika</a>
     <a href="tugas-pc.html">📙 Pancasila</a>
     <a href="tugas-IPAS.html">🌍 IPAS</a>
     <a href="tugas-BJ.html">🎋 Bahasa Jawa</a>
