--- a/kelas-5/tugas/matematika/soal_matematika_25_nov_25.html
+++ b/kelas-5/tugas/matematika/soal_matematika_25_nov_25.html
@@ -147,8 +147,8 @@ button:hover { background-color: #0056b3; }
 <body>
 <div class="container">
     <div class="nav">
-        <a href="../../tugas-bIndo.html">◀️ kembali</a>
-        <a href="Soal_Tugas_Selasa_25_November_2025.docx" download>📥 Download</a>
+        <a href="../tugas.html">◀️ kembali</a>
+        <a href="soal_matematika_25_nov_25.docx" download>📥 Download</a>
     </div>
 
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -385,3 +385,4 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
