--- a/kelas-5/tugas/matematika/soal_matematika_25_nov_25.html
+++ b/kelas-5/tugas/matematika/soal_matematika_25_nov_25.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Latihan Soal Bahasa Indonesia</title>
+<title>Latihan Soal Matematika</title>
 <style>
 /* ——— CSS Anda tetap, tidak diubah sedikit pun ——— */
 .kotak-soal {
@@ -385,4 +385,5 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
 
