--- a/kelas-5/Danau_PLH/bab2.html
+++ b/kelas-5/Danau_PLH/bab2.html
@@ -141,10 +141,12 @@
   <a href="Sampah_di_Lingkungan_dan_Jenisnya.html" class="map-item"><span class="emoji">🗑️</span>Sampah di Lingkungan dan Jenisnya</a>
   <a href="Cara-Pemanfaatan-Sampah.html" class="map-item"><span class="emoji">♻️</span>Cara Pemanfaatan Sampah</a>
   <a href="Dampak-Negatif.html" class="map-item"><span class="emoji">⚠️</span>Dampak Negatif Membuang Sampah Sembarangan</a>
+    <a href="evaluasi_Bab_2" class="map-item"><span class="emoji">🎯</span>Evaluasi</a>
 </div>
 
 </body>
 </html>
+
 
 
 
