--- a/kelas-5/Danau_PLH/Dampak-Negatif.html
+++ b/kelas-5/Danau_PLH/Dampak-Negatif.html
@@ -124,7 +124,7 @@
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="../Petualangan-Kelas-5.html">◀️ kembali</a>
+      <a href="bab2.html">◀️ kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -153,5 +153,6 @@
 
 </body>
 </html>
+
 
 
