--- a/kelas-5/Danau_PLH/bab2.html
+++ b/kelas-5/Danau_PLH/bab2.html
@@ -124,7 +124,7 @@
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="../Petualangan-Kelas-5.html">◀️ kembali</a>
+      <a href="plh5.html">◀️ kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -146,6 +146,7 @@
 
 </body>
 </html>
+
 
 
 
