--- a/kelas-5/Basa_Jawa/landing-page-bahasa-jawa.html
+++ b/kelas-5/Basa_Jawa/landing-page-bahasa-jawa.html
@@ -218,7 +218,7 @@
   </div>
 
   <div class="grid">
-    <a href="materi-bahsa-jawa.html">
+    <a href="Jinise_wacan/Jinise_teks_wacan.html">
       <div class="card">
         <div class="icon">🗣️</div>
         <h3>Jinise Teks Wacan</h3>
@@ -226,7 +226,7 @@
       </div>
     </a>
 
-    <a href="#">
+    <a href="pawarta/pawarta.html">
       <div class="card">
         <div class="icon">📖</div>
         <h3>Pawarta</h3>
@@ -234,7 +234,7 @@
       </div>
     </a>
 
-    <a href="#">
+    <a href="Basa_Rinengga/basa_rinengga.html">
       <div class="card">
         <div class="icon">🎭</div>
         <h3>Basa Rinengga</h3>
@@ -242,7 +242,7 @@
       </div>
     </a>
 
-    <a href="#">
+    <a href="Tembang_Macapat/tembang_macapat.html">
       <div class="card">
         <div class="icon">🧩</div>
         <h3>Tembang Macapat</h3>
@@ -250,7 +250,7 @@
       </div>
     </a>
 
-    <a href="#">
+    <a href="Tembang_Dolanan/tembang_dolanan.html">
       <div class="card">
         <div class="icon">🎬</div>
         <h3>Tembang Dolanan</h3>
@@ -279,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
