--- a/kelas-5/Basa_Jawa/Jinise_wacan/Jinise_teks_wacan.html
+++ b/kelas-5/Basa_Jawa/Jinise_wacan/Jinise_teks_wacan.html
@@ -204,7 +204,7 @@
       <!-- Menu kanan atas -->
       <div class="menu-kanan">
         <a href="../../../index.html">🏠 Beranda</a>
-        <a href="landing-page-bahasa-jawa.html">◀️ Kembali</a>
+        <a href="../landing-page-bahasa-jawa.html">◀️ Wangsul</a>
       </div>
 
       <div class="title-box">
@@ -316,3 +316,4 @@
   </div>
 </body>
 </html>
+
