--- a/kelas-5/Basa_Jawa/pawarta/pawarta.html
+++ b/kelas-5/Basa_Jawa/pawarta/pawarta.html
@@ -175,8 +175,8 @@ margin-top:70px;   /* ✨ Tambahkan ini */
   
 <div class="top-menu">
   <a href="../../index.html">🏠 Beranda</a>
-  <a href="../Petualangan-Kelas-5.html">◀️ Kembali</a>
-  <a href="../kelas.html">🏫 Kelas</a>
+  <a href="../../Petualangan-Kelas-5.html">◀️Wangsul</a>
+  <a href="../../kelas.html">🏫 Kelas</a>
 </div>
 
   <div class="container">
@@ -279,11 +279,12 @@ margin-top:70px;   /* ✨ Tambahkan ini */
 
 
 <a class="btn-evaluasi" href="soal_Sampah_di_Lingkungan_dan_Jenisnya.html">
-  ➤ Mulai Evaluasi
+  ➤ Evaluasi
 </a>
 
   </div>
 </body>
 </html>
+
 
 
