--- a/kelas-5/Basa_Jawa/Jinise_wacan/Jinise_teks_wacan.html
+++ b/kelas-5/Basa_Jawa/Jinise_wacan/Jinise_teks_wacan.html
@@ -304,7 +304,7 @@
       <div class="evaluasi-box">
         <h2>✨ Wektu Evaluasi! ✨</h2>
         <p>Ayo uji pemahamanmu saka materi iki kanthi ngerjakake soal latihan basa Jawa! Semangat lan tetep nyenengake ya! 💪</p>
-        <a href="tugas/bahasa _jawa/soal-bahasa-jawa-11-November-2025.html">
+        <a href="/kelas-5/tugas/bahasa _jawa/soal-bahasa-jawa-11-November-2025.html">
           <button class="evaluasi-btn">Mulai Evaluasi ➜</button>
         </a>
       </div>
@@ -316,5 +316,6 @@
   </div>
 </body>
 </html>
+
 
 
