--- a/kelas-5/Basa_Jawa/Jinise_wacan/Jinise_teks_wacan.html
+++ b/kelas-5/Basa_Jawa/Jinise_wacan/Jinise_teks_wacan.html
@@ -304,8 +304,8 @@
       <div class="evaluasi-box">
         <h2>✨ Wektu Evaluasi! ✨</h2>
         <p>Ayo uji pemahamanmu saka materi iki kanthi ngerjakake soal latihan basa Jawa! Semangat lan tetep nyenengake ya! 💪</p>
-        <a href="../../tugas/bahasa_jawa/soal-bahasa-jawa-11-November-2025.html">
-          <button class="evaluasi-btn">Mulai Evaluasi ➜</button>
+        <a href="soal_jinise_wacan.html">
+          <button class="evaluasi-btn">Evaluasi ➜</button>
         </a>
       </div>
     </main>
@@ -316,6 +316,7 @@
   </div>
 </body>
 </html>
+
 
 
 
