--- a/kelas-5/Basa_Jawa/Jinise_wacan/soal_jinise_wacan.html
+++ b/kelas-5/Basa_Jawa/Jinise_wacan/soal_jinise_wacan.html
@@ -169,7 +169,7 @@ button:hover { background-color: #0056b3; }
 
 <div class="container">
   <div class="nav">
-    <a href="materi-bahsa-jawa.html">◀️ Mundur</a>
+    <a href="Jinise_teks_wacan.html">◀️ Mundur</a>
     <a href="javascript:void(0)" onclick="window.location.reload()">🔄 Baleni</a>
   </div>
 
@@ -370,3 +370,4 @@ function selesaiKuis(){
 
 </body>
 </html>
+
