--- a/kelas-5/Basa_Jawa/pawarta/pawarta.html
+++ b/kelas-5/Basa_Jawa/pawarta/pawarta.html
@@ -174,7 +174,7 @@ margin-top:70px;   /* ✨ Tambahkan ini */
 
   
 <div class="top-menu">
-  <a href="../../index.html">🏠 Beranda</a>
+  <a href="../../../index.html">🏠 Beranda</a>
   <a href="../../Petualangan-Kelas-5.html">◀️Wangsul</a>
   <a href="../../kelas.html">🏫 Kelas</a>
 </div>
@@ -285,6 +285,7 @@ margin-top:70px;   /* ✨ Tambahkan ini */
   </div>
 </body>
 </html>
+
 
 
 
