--- a/kelas-5/Basa_Jawa/pawarta/pawarta.html
+++ b/kelas-5/Basa_Jawa/pawarta/pawarta.html
@@ -278,13 +278,14 @@ margin-top:70px;   /* ✨ Tambahkan ini */
 </article>
 
 
-<a class="btn-evaluasi" href="soal_Sampah_di_Lingkungan_dan_Jenisnya.html">
+<a class="btn-evaluasi" href="soal-pawarta.html">
   ➤ Evaluasi
 </a>
 
   </div>
 </body>
 </html>
+
 
 
 
