--- a/kelas-5/Basa_Jawa/pawarta/soal-pawarta.html
+++ b/kelas-5/Basa_Jawa/pawarta/soal-pawarta.html
@@ -147,7 +147,7 @@ button:hover { background-color: #0056b3; }
 
 <div class="container">
     <div class="nav">
-        <a href="Sampah_di_Lingkungan_dan_Jenisnya.html">◀️ kembali</a>
+        <a href="pawarta.html">◀️ wangsul</a>
     </div>
 
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -486,7 +486,7 @@ function ulangiKuis(){
 }
 
 function keluarKuis(){
-    window.location.href="Sampah_di_Lingkungan_dan_Jenisnya.html";
+    window.location.href="pawarta.html";
 }
 
 /* ====================== SUARA ====================== */
@@ -523,3 +523,4 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
