--- a/kelas-5/Basa_Jawa/landing-page-bahasa-jawa.html
+++ b/kelas-5/Basa_Jawa/landing-page-bahasa-jawa.html
@@ -207,7 +207,7 @@
 <!-- Menu kanan atas -->
 <div class="top-menu">
   <a href="../../../index.html">🏠 Beranda</a>
-  <a href="../Petualangan-Kelas-5.html">◀️ Kembali</a>
+  <a href="../Petualangan-Kelas-5.html">◀️ Wangsul</a>
   <a href="#galeri.html">🖼️ Galeri</a>
 </div>
 
@@ -279,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
